Add exportAerospikeCase to OpenFOAMExporter
OpenFOAMExporter gains exportAerospikeCase(AerospikeNozzle, Path), which
writes a complete rhoCentralFoam case for the annular flow domain of an
aerospike nozzle. The mesh covers the gap between the spike inner surface
and the constant-radius cowl outer wall; there is no axis patch.

blockMeshDict uses a 5 degree axisymmetric wedge with the spike contour
embedded as a spline edge. Boundary patches are inlet, outlet, spike (wall),
cowl (wall), wedge0 and wedge1. Shared solver files (controlDict, fvSchemes,
fvSolution, thermophysicalProperties, turbulenceProperties) are reused from
the bell-nozzle path. The five aerospike-specific 0/ fields are written by
new private methods that substitute spike and cowl patches for the single
wall and empty axis patches used by the bell-nozzle case. The omega mixing-
length estimate uses 7% of the annular gap width rather than 7% of the
throat radius.

demonstrateAerospikeNozzle in Main.java calls exportAerospikeCase so the
new code is exercised from the demo pipeline. README.MD and docs/api-guide.md
are updated to document the aerospike case structure and usage.